--- a/static/styles.css
+++ b/static/styles.css
@@ -67,3 +67,11 @@ button:hover {
 button:active {
     box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.5);
 }
+
+.calculator h1 {
+    text-align: center;
+    color: #fff;
+    font-size: 2.5em;
+    display: flex;
+    justify-content: center;
+}
